# jacobs_ladder

./: .gitignore  AppRequirements.md  CMakeLists.txt  Dockerfile  Doxyfile  Intervals.h  Project Requirements.md  README.md  __init__.py  architecture.txt  architecture_cpp.txt  docker-clean.bat  docker-startup.bat  environment.yaml  example  pyproject.toml  startWinAppDriver.bat  start_analog_labV.bat
hello_world/: Intervals.h  Notes.h  Triads.h  main.cpp
jacobs_ladder/: CMakeLists.txt  __init__.py  virtual_midi.pyd
jacobs_ladder/bindings/: compile.py  example.pyx  tuning_utils_benchmark.py
jacobs_ladder/configuration/ini/: jacobs_ladder.ini  jacobs_ladder2.ini
jacobs_ladder/configuration/json/pitch/: 5-limit-pref.json  5-limit-ratios.json  7-limit-pref.json  (+1 more)
jacobs_ladder/configuration/yaml/: default_config.yaml
jacobs_ladder/cpp/: CMakeLists.txt
jacobs_ladder/cpp/lib/: rtmidi-debug.lib
jacobs_ladder/cpp/pybind/: VirtualMidiPortManager.cpp  qpc_utils.cpp  virtual_midi.cpp
jacobs_ladder/cpp/src/: CommonMath.h  Constants.h  HarmonicPattern.cpp  HarmonicPattern.h  MathUtils.h  MidiDefinitions.h  MidiScheduler.cpp  MidiScheduler.h  MidiUtils.h  PatternUtils.h  QpcUtils.cpp  QpcUtils.h  RhythmPattern.cpp  RhythmPattern.h  VelocityPattern.cpp  VelocityPattern.h  VirtualMidi2.cpp  VirtualMidiManager.cpp  VirtualMidiManager.h  VirtualMidiPortManager.cpp  VirtualMidiPortManager.h
jacobs_ladder/cpp/test/: MapPorts.cpp  MidiSchedulerExample.cpp  MidiSchedulerTest.cpp  QpcUtilsTest.cpp  RhythmPatternTest.cpp  VirtualMidiPortScript.cpp
jacobs_ladder/csv/: degree_3_interval_4_nco_0.csv  degree_6_interval_4_nco_0.csv
jacobs_ladder/json/ports/: port_configuration.json
jacobs_ladder/ladder/: .gitignore  README.md  pubspec.yaml
jacobs_ladder/ladder/lib/: app.dart  main.dart
jacobs_ladder/ladder/linux/: CMakeLists.txt
jacobs_ladder/ladder/test/: widget_test.dart
jacobs_ladder/ladder/web/: index.html
jacobs_ladder/ladder/windows/: CMakeLists.txt
jacobs_ladder/scales/: degree_5_interval_4_nc0_0_scale.csv
jacobs_ladder/scripts/: install.ps1
jacobs_ladder/src/: ChordClassifier.py  CircularQueue.py  Compatibility.py  DataClasses.py  Dictionaries.py  Enums.py  EnvironmentSetup.py  Favorites.py  HarmonicMajorScales.py  HarmonicMinorScales.py  Jacob.py  JacobMonitor.py  JustIntonation.py  Logging.py  MajorScales.py  MelodicMinorScales.py  MidiInjector.py  MidiManager.py  MidiRecorder.py  MidiScheduler.py  MockQpc.py  MockSender.py  MusicTheory.py  NegativeHarmony.py  Pitch.py  PlayMidi.py  PolyRhythms.py  Sandbox.py  ScaleClassifier.py  ScaleTree.py  Scales.py  TestPiano.py  Tuner.py  TuningUtils.py  Udp.py  UserMonitor.py  Utilities.py
jacobs_ladder/src/cython/: Sandbox2.pyx  compile.py  tuning_utils.pyi  tuning_utils.pyx  tuning_utils_benchmark.py
jacobs_ladder/src/possible_scales/: degree_2_interval_11_nco_1.csv  degree_2_interval_11_nco_1_named.csv  degree_2_interval_9_nco_1.csv  degree_3_interval_11_nco_1.csv  degree_3_interval_11_nco_1_named.csv  degree_3_interval_9_nco_0.csv  degree_4_interval_11_nco_1.csv  degree_4_interval_11_nco_1_named.csv  degree_4_interval_4_nco_0.csv  degree_4_interval_4_nco_0_root_rotated.csv  degree_4_interval_9_nco_0.csv  degree_4_interval_9_nco_0_named.csv  degree_4_interval_9_nco_1_named.csv  degree_5_interval_11_nco_1_named.csv  degree_5_interval_9_nco_0.csv  degree_5_interval_9_nco_0_named.csv  degree_5_interval_9_nco_1.csv  degree_5_interval_9_nco_1_named.csv  degree_6_interval_9_nco_0.csv  degree_6_interval_9_nco_0_named.csv  degree_6_interval_9_nco_1.csv  degree_6_interval_9_nco_1_named.csv  degree_7_interval_11_nco_1_named.csv  degree_7_interval_9_nco_0.csv  degree_7_interval_9_nco_0_named.csv  degree_7_interval_9_nco_1.csv  degree_8_interval_9_nco_0.csv  degree_8_interval_9_nco_0_named.csv  degree_8_interval_9_nco_1.csv  degree_8_interval_9_nco_1_named.csv  final_degree_2_interval_11_nco_1_named.csv  final_degree_3_interval_11_nco_1_named.csv  final_degree_4_interval_11_nco_1_named.csv  final_degree_5_interval_11_nco_1_named.csv  final_degree_6_interval_11_nco_1_named.csv  final_degree_7_interval_11_nco_1_named.csv  final_degree_8_interval_11_nco_1_named.csv
jacobs_ladder/src/pybind/: .gitignore  CMakeLists.txt
jacobs_ladder/src/pybind/virtual_midi/: CMakeLists.txt  VirtualMidi.cpp
jacobs_ladder/src/visual_basic/: PortMapping.vbs
jacobs_ladder/test/: TestQpcUtils.py
json/: harmonic_seven_config.json  pitch_config.json
python/: ConfigureInstruments.py  HarmonicMajorScales.py  HarmonicMinorScales.py  Jacob.py  JustIntonation.py  MajorScales.py  MelodicMinorScales.py  MidiInjector.py  MidiManager.py  MidiReader.py  MusicTheory.py  TeardownInstruments.py  Utilities.py
python/legacy/: MidiInjector.py  MidiReader.py
python/music/: JustIntonation.py  MusicTheory.py
python/music/chord_definitions/: TriadDefinitions.py
python/music/scales/: HarmonicMajorScales.py  HarmonicMinorScales.py  MajorScales.py  MelodicMinorScales.py
python/process_management/: CreatePorts.py
python/study/: ChordSeqTree.py  ScaleClassifier.py  ScaleTree.py
python/test/: MidiInjector.py
python/utilities/: DataClasses.py  Dictionaries.py  Enums.py  Queue.py  SharedMemory.py
scales/: degree_5_interval_4_nc0_0_scale.csv
src/: CMakeLists.txt  ChordSeqTree.py  CircularQueue.py  ConfigureInstruments.py  CreatePorts.py  DataClasses.py  Dictionaries.py  Enums.py  EnvironmentSetup.py  Favorites.py  HarmonicMajorScales.py  HarmonicMinorScales.py  Intervals.h  Jacob.py  JacobMonitor.py  JustIntonation.py  LEDControl.ino  MajorScales.py  MelodicMinorScales.py  MidiInjector.py  MidiManager.py  MidiScheduler.py  MusicTheory.py  Notes.h  PolyRhythms.py  PossibleTransitions.py  Queue.py  RhythemGenerator.py  RhythmCombinations.py  RhythmGenerator.py  Sandbox.py  ScaleClassifier.py  ScaleTree.py  SharedMemory.py  TeardownInstruments.py  TimeKeeper.py  TriadDefinitions.py  Triads.cpp  Triads.h  Udp.py  (+3 more)
src/cython/: example.pyi
src/possible_scales/: degree_5_interval_4_nco_0.csv
test/: CMakeLists.txt  TestMain.cpp  TestTriads.cpp
(+31 files in other folders)
