[build-system]
requires = ["hatchling", "cython", "setuptools"]
build-backend = "hatchling.build"

[project]
name = "jacobs_ladder"
version = "0.0.1"
authors = [
    { name = "Alex Wilson", email = "awilson2244@gmail.com" },
]
description = "An AI music research project that generates music, explores music theory, and provides utility functions for music analysis."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pandas",
    "cython",
    "pytest-html",
    "appium-python-client==4.4.0",
    "pyautogui==0.9.54",
    "python-rtmidi==1.5.8",
    "selenium==4.27.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "allure>=2.32.0"
]

[tool.hatch.version]
path = "jacobs_ladder/__init__.py"

[tool.setuptools.packages]
find = { where = ["jacobs_ladder"] }
